--- a/index.html
+++ b/index.html
@@ -141,6 +141,34 @@
         </div>
       </div>
     </section>
+
+    <section class="partners">
+      <div class="container">
+        <h2 class="title partners__title">
+          <span class="title__big">Partners</span>
+          Our partners
+        </h2>
+        <div class="partners-slider swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="" height="160" src="./img/partners/img-1.jpg" alt="partners"></a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="" height="160" src="./img/partners/img-2.jpg" alt="partners"></a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="" height="160" src="./img/partners/img-3.jpg" alt="partners"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
   </main>
   
