--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Waterson Developments</title>
+  <title>Waterson Development</title>
   <link href="./libs/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="./css/main.css" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container header__container">
       <a class="logo header__logo" href="#!">
-        <img class="logo__img" src="./img/logo-light.png" alt="Waterson Developmets">
+        <img class="logo__img" src="./img/logo-light.png" width="193" height="60" alt="Waterson Developmet">
       </a>
       <nav class="nav header__nav">
         <ul class="nav__list">
@@ -152,17 +152,37 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="partners-slider__thumb">
-                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="" height="160" src="./img/partners/img-1.jpg" alt="partners"></a>
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-1.jpg" alt="partners"></a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="partners-slider__thumb">
-                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="" height="160" src="./img/partners/img-2.jpg" alt="partners"></a>
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-2.jpg" alt="partners"></a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="partners-slider__thumb">
-                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="" height="160" src="./img/partners/img-3.jpg" alt="partners"></a>
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-3.jpg" alt="partners"></a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-4.jpg" alt="partners"></a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-5.jpg" alt="partners"></a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-6.jpg" alt="partners"></a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="partners-slider__thumb">
+                <a class="partners-slider__link" href="#!" target="_blank"><img class="partners-slider__img" width="300" height="160" src="./img/partners/img-7.jpg" alt="partners"></a>
               </div>
             </div>
           </div>
@@ -171,6 +191,50 @@
     </section>
     
   </main>
+
+  <footer class="footer">
+    <div class="footer__top">
+      <div class="container footer__top-container">
+        <div class="footer__left">
+          <a class="logo footer__logo" href="#!"><img class="logo__img" src="./img/logo-light.png" width="193" height="60" alt="Waterson Developmet"></a>
+          <div class="footer__social">
+            <a class="footer__social-link" href="#!"><img src="./img/icon/soc-facebook.svg" alt="facebook"></a>
+            <a class="footer__social-link" href="#!"><img src="./img/icon/soc-youtube.svg" alt="youtube"></a>
+            <a class="footer__social-link" href="#!"><img src="./img/icon/soc-instagram.svg" alt="instagram"></a>
+            <a class="footer__social-link" href="#!"><img src="./img/icon/soc-vk.svg" alt="vk"></a>
+            <a class="footer__social-link" href="#!"><img src="./img/icon/soc-telegram.svg" alt="telegram"></a>
+          </div>
+        </div>
+        <ul class="list-reset footer__nav">
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#!">About Us</a></li>
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#!">Services</a></li>
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#!">Partners</a></li>
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#!">Contacts</a></li>
+        </ul>
+        <div class="footer__contact">
+          <div class="footer__contact-item">
+            <a class="footer__phone" href="tel:+998901300053">+998 (90) 130-00-53</a>
+            <a class="footer__email" href="mailto:khakimov_sh@waterson.uz">khakimov_sh@waterson.uz</a>
+          </div>
+          <div class="footer__contact-item">
+            <button class="btn-reset btn footer__btn">
+              Engineer consultation
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="container footer__bottom-container">
+        <div class="footer__copyright">
+          &copy; 2016-2024 WATERSON DEVELOPMENT. All rights reserved
+        </div>
+        <div class="footer__greatweb">
+          Разработка и создание сайтов <a href="https://elit.uz/">www.elit.uz</a>
+        </div>
+      </div>
+    </div>
+  </footer>
   
 
   <script src="./libs/swiper/swiper-bundle.min.js"></script>
