--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </section>
 
-    <section class="about d-none">
+    <section class="about">
       <div class="container grid">
         <div class="about__content">
           <h2 class="title about__title">
@@ -93,7 +93,7 @@
       </div>
     </section>
 
-    <section class="decisions d-none">
+    <section class="decisions">
       <div class="decisions__container">
         <div class="decisions__gradient">
           <div class="decisions__items grid">
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <section class="services d-none">
+    <section class="services">
       <div class="container grid">
         <div class="services__content">
           <h2 class="title services__title">
@@ -149,7 +149,7 @@
       </div>
     </section>
 
-    <section class="partners d-none">
+    <section class="partners">
       <div class="container">
         <h2 class="title partners__title">
           <span class="title__big">Partners</span>
@@ -199,7 +199,7 @@
     
   </main>
 
-  <footer class="footer d-none">
+  <footer class="footer">
     <div class="footer__top">
       <div class="container footer__top-container">
         <div class="footer__left">
