--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <button class="btn-reset btn btn--primary hero__btn">
             <span>Engineer consultation</span>
-            <img src="./img/btn-arrow.svg" alt="arrow">
+            <img src="./img/btn-arrow.svg" width="32" height="32" alt="arrow">
           </button>
         </div>
         <div class="hero-slider__pagination"><div class="number"></div></div>
@@ -120,7 +120,7 @@
           <p>We&nbsp;will help you select the equipment that best suits your project and technological needs, provide qualified consultation, and offer opportunities for optimization and cost savings.</p>
           <button class="btn-reset btn btn--outline decisions__btn">
             <span>Request a consultation</span>
-            <img src="./img/btn-primary-arrow.svg" alt="arrow">
+            <img src="./img/btn-primary-arrow.svg" width="32" height="32" alt="arrow">
           </button>
         </div>
       </div>
