--- a/index.html
+++ b/index.html
@@ -64,13 +64,22 @@
       <div class="swiper hero-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img class="hero-slider__img" src="./img/slider/img-1.jpg" alt="slider">
+            <picture>
+              <source srcset="./img/slider/img-1.webp" type="image/webp">
+              <img class="hero-slider__img" src="./img/slider/img-1.jpg" alt="slider">
+            </picture>
           </div>
           <div class="swiper-slide">
-            <img class="hero-slider__img" src="./img/slider/img-2.jpg" alt="slider">
+            <picture>
+              <source srcset="./img/slider/img-2.webp" type="image/webp">
+              <img class="hero-slider__img" src="./img/slider/img-2.jpg" alt="slider">
+            </picture>
           </div>
           <div class="swiper-slide">
-            <img class="hero-slider__img" src="./img/slider/img-3.jpg" alt="slider">
+            <picture>
+              <source srcset="./img/slider/img-3.webp" type="image/webp">
+              <img class="hero-slider__img" src="./img/slider/img-3.jpg" alt="slider">
+            </picture>
           </div>
         </div>
       </div>
