--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
           <a class="btn-reset btn about__btn" href="#!">Подробнее</a>
         </div>
         <div class="about__image">
-          <img class="about__img" src="./img/about-img.jpg" width="1042" height="694" alt="about">
+          <picture>
+            <source srcset="./img/about-img.webp" type="image/webp">
+            <img class="about__img" src="./img/about-img.jpg" width="1042" height="694" alt="about">
+          </picture>
         </div>
       </div>
     </section>
@@ -153,7 +156,10 @@
           </ul>
         </div>
         <div class="services__image">
-          <img class="services__img" src="./img/service-img.jpg" width="1042" height="694" alt="services">
+          <picture>
+            <source srcset="./img/service-img.webp" type="image/webp">
+            <img class="services__img" src="./img/service-img.jpg" width="1042" height="694" alt="services">
+          </picture>
         </div>
       </div>
     </section>
