--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
           <div class="swiper-slide">
             <picture>
               <source srcset="./img/slider/img-1.webp" type="image/webp">
-              <img class="hero-slider__img" src="./img/slider/img-1.jpg" alt="slider">
+              <img class="hero-slider__img" src="./img/slider/img-1.jpg" width="1920" height="1000" alt="slider">
             </picture>
           </div>
           <div class="swiper-slide">
             <picture>
               <source srcset="./img/slider/img-2.webp" type="image/webp">
-              <img class="hero-slider__img" src="./img/slider/img-2.jpg" alt="slider">
+              <img class="hero-slider__img" src="./img/slider/img-2.jpg" width="1920" height="1000" alt="slider">
             </picture>
           </div>
           <div class="swiper-slide">
             <picture>
               <source srcset="./img/slider/img-3.webp" type="image/webp">
-              <img class="hero-slider__img" src="./img/slider/img-3.jpg" alt="slider">
+              <img class="hero-slider__img" src="./img/slider/img-3.jpg" width="1920" height="1000" alt="slider">
             </picture>
           </div>
         </div>
