--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header__phone" href="tel:+998901300053">+998 (90) 130-00-53</a>
-      <button class="btn-reset burger" id="burger">
+      <button class="btn-reset burger" id="burger" aria-label="Buger">
         <span class="burger__line"></span>
         <span class="burger__line"></span>
         <span class="burger__line"></span>
@@ -42,7 +42,7 @@
             <p>Provision of&nbsp;services in&nbsp;the oil and gas and petrochemical industries (production, pipeline transport, oil and gas processing).</p>
             <p>A&nbsp;range of&nbsp;services including technical maintenance, operation, routine and major repairs, modernization, adjustment, testing, diagnostics of&nbsp;process equipment and structures, as&nbsp;well as&nbsp;software development and automation of&nbsp;production.</p>
           </div>
-          <button class="btn-reset btn btn--primary hero__btn">
+          <button class="btn-reset btn btn--primary hero__btn" aria-label="Consultation">
             <span>Engineer consultation</span>
             <img src="./img/btn-arrow.svg" width="32" height="32" alt="arrow">
           </button>
@@ -130,7 +130,7 @@
         <div class="decisions__content">
           <h2 class="title decisions__title">We&nbsp;will offer the optimal solution for any situation</h2>
           <p>We&nbsp;will help you select the equipment that best suits your project and technological needs, provide qualified consultation, and offer opportunities for optimization and cost savings.</p>
-          <button class="btn-reset btn btn--outline decisions__btn">
+          <button class="btn-reset btn btn--outline decisions__btn" aria-label="Consultation">
             <span>Request a consultation</span>
             <img src="./img/btn-primary-arrow.svg" width="32" height="32" alt="arrow">
           </button>
@@ -239,7 +239,7 @@
             <a class="footer__email" href="mailto:khakimov_sh@waterson.uz">khakimov_sh@waterson.uz</a>
           </div>
           <div class="footer__contact-item">
-            <button class="btn-reset btn footer__btn">
+            <button class="btn-reset btn footer__btn" aria-label="Consultation">
               Engineer consultation
             </button>
           </div>
