--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Waterson Development</title>
+  <meta name="description" content="Provision of services in the oil and gas and petrochemical industries">
   <link href="./libs/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="./css/main.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
