--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           &copy; 2016-2024 WATERSON DEVELOPMENT. All rights reserved
         </div>
         <div class="footer__greatweb">
-          Разработка и создание сайтов <a href="https://elit.uz/">www.elit.uz</a>
+          Разработка и создание сайтов <a class="footer__greatweb-link" href="https://elit.uz/">www.elit.uz</a>
         </div>
       </div>
     </div>
